<resources>
    <string name="app_name">Socionic</string>
    <string name="socionics">Socionics</string>
    <string name="fast_start">Быстрый тест</string>
    <string name="full_test">Полный Тест</string>
    <string name="compatibility">Совместимость</string>
    <string name="extravert">Этико-интуитивный интраверт</string>
    <string name="description_example">\t 1. Главная его черта — гуманизм и сочувствие к людям.
        Со всеми поддерживает ровные, доброжелательные отношения. Миротворец: умеет примирить
        враждебные стороны, но при этом оставаться объективным. Выслушивая людей, снимает их
        эмоциональное напряжение. Не копит в себе зла, прощает своих обидчиков и недоброжелателей.
        \n\t2. Готов прийти на помощь людям, обратившихся к нему за поддержкой. Отрицательно относится
        к насилию, противопоставляя ему спокойное упрямство и выдержку. Хотя терпим и уступчив,
        но измены и несправедливости не прощает. Хорошо замечает альтернативы и упущения в новых
        начинаниях. Вскрывает человеческие пороки, но облекает это в тактичную форму.</string>
    <string name="previous">Предыдущий</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="number_example">29</string>
    <string name="question_example">Доверяю приобретенному опыту, а не интуиции.</string>
    <string name="result">Результат</string>
    <string name="loading_error">loading_error</string>
    <string name="this_is_socionics">Соционика - это наука, изучающая процесс обмена информацией между человеком и внешним миром, т.е. каким образом люди воспринимают, перерабатывают и выдают информацию. Соционика помогает лучше понимать возможности и способности других людей, что можно ожидать от человека. Известный психолог К. Г. Юнг выделил два типа людей — экстравертов и интровертов. Люди также различаются по доминирующей функции, которая бывает мыслительной, эмоционально чувствующей, ощущающей или интуитивной. Типовая дифференциация отмечается со столь раннего возраста, что можно говорить о ней как о врожденной.</string>
    <string name="about_app">О приложении Socionic</string>
    <string name="desc_psychotype">Психосоциотип личности — врожденная психическая структура, определяющая конкретный вид информационного обмена человека со средой в зависимости от уровня развития таких психических функций, как эмоции, ощущения, интуиция и мышление и специфики предпочтений — экстраверсии или интроверсии. Выделяют 16 психосоциотипов (условно названных в честь самых известных их представителей), каждый из которых состоит с другими типами личности в различных отношениях: полное дополнение (дуальные); полудуальные; полная противоположность; деловые; тождество; квазитождество; зеркальные; суперэго; подвергаемый ревизии; ревизор; активизации; передатчик; приемник; родственные; миражные; конфликтные.</string>
    <string name="what_psychotype">Что такое психотип?</string>
    <string name="ocionics">OCIONICS</string>
    <string name="recognize_yourself">Recognize yourself</string>
    <string name="tojd">Тождественные</string>
    <string name="dual">Дуал</string>
    <string name="akt">Активация</string>
    <string name="zerk">Зеркальные</string>
    <string name="zak">Исполнитель</string>
    <string name="rev">Подконтрольный</string>
    <string name="del">Деловые</string>
    <string name="mirj">Миражные</string>
    <string name="sego">СуперЭго</string>
    <string name="ppol">Противоположность</string>
    <string name="kvtoj">Квазитождественные</string>
    <string name="konf">Конфликтные</string>
    <string name="rods">Родственные</string>
    <string name="pdual">Полудуал</string>
    <string name="tojd_desc">В тождественных отношениях между партнёрами складываются отношения полного понимания, но неумения помочь друг другу. Тождественные типы личности одинаковыми глазами смотрят на мир, аналогичным образом осмысливают поступающую информацию, делают почти одни и те же выводы, а также сталкиваются с одними и теми же проблемами. Видя это, у каждого возникает сочувствие к другому. Партнёра хочется поддержать, оправдать тем или иным образом, так как чувствуешь, что в этой ситуации сам поступил бы также. С другой стороны, тождественное общение быстро надоедает. Не получая новой информации от партнёра, видишь всю бесполезность такого общения. Неинформативный партнёр кажется скучным, неинтересным. В тождественных отношених со временем устанавливаются либо нейтральные, либо прохладные отношения. Это и не удивительно, ведь после обмена информацией её уже неинтересно обсуждать, зная наперед, что к таким же выводам можно придти и самому.</string>
    <string name="dual_desc">Дуальные отношения являются наиболее оптимальными для обеспечения жизнедеятельности индивида. Дуальные отношения — самые удобные, там не нужно приспосабливаться друг к другу. Общаясь с дуалом, человек может оставаться самим собой. Происходит естественное, самой природой обусловленное разделение обязанностей, и человек в дуальной паре получает возможность заниматься посильным и интересным для себя делом. В дуальных парах редко возникают конфликты, а если и возникают, то быстро и безболезненно разрешаются. Партнёры подходят друг к другу как две половинки разорванной фотографии, вместе составляющие одно целое. Но именно из-за того, что быстро устанавливается взаимопонимание и нет внутренних источников напряжения, дуала не сразу выделяешь среди других людей. Дуал кажется слишком простым и понятным, а значит, и не заслуживающим внимания. Это первая позиция, которую может занять человек, встретив дуала. Она скорее свойственна экстравертам. Вторая позиция — это, когда говоришь себе: он слишком хорош для меня, я вряд ли смогу ему понравиться. Эта позиция больше характерна для интроверта. Обе эти позиции встречаются у людей, не имевших опыта дуального общения в детстве.</string>
    <string name="akt_desc">Отношения активации - эти отношения самые лёгкие, общение завязывается почти сразу. Никаких затруднений в общении не возникает, что поначалу приятно удивляет. Партнёры как бы «разогревают» друг друга, поощряют активность друг друга. В отношениях активации общение, особенно при благоприятствующих подтипах, очень притягивает. Контакт здесь устанавливается быстрее, чем с дуалом. Однако с течением времени наступает «перегрев», появляется усталость от партнёра, постоянно вас активизирующего. В этом случае от него нужно отдалиться. Через некоторое время опять хочется испытать действие активизации. Отношения активации могут приобрести характер пульсации. Однако такая приятность и легкость общения, которую очень ценишь на отдыхе, сменяется проблемами, когда партнёры принимаются за совместные повседневные дела. Неприятно задевает то, что партнёры начинают давать друг другу советы по слабым функциям, вместо того, чтобы взять эти проблемы на себя. Однако пользу таких словесных наставлений нельзя отрицать. Плохо лишь то, что, как бы вы не третировали свои слабые качества, развить их в себе так, как вам хотелось бы, все равно не удастся.</string>
    <string name="zerk_desc">Зеркальные отношения получили свое название из-за того, что слова одного отражаются, как в зеркале, в поступках другого. О чем любит рассуждать один из «зеркальщиков», то другой неосознанно реализует своим поведением. Однако такая реализация никогда не бывает полной, 100%. Зеркало оказывается искривленным, так как корректирует, исправляет свои поступки каждый исходя из совсем других норм поведения, чем партнёр. По этой причине и возникает недоумение, а порой и претензии друг к другу. Каждый стремится подправить поведение партнёра, однако такие попытки перевоспитания не имеют шансов на успех.
С другой стороны, если учитывать чисто словесную сторону общения, зеркальные отношения могут быть названы отношениями конструктивной критики. Дело в том, что в зеркальной паре оба партнёра всегда либо теоретики, либо практики. Поэтому у них всегда найдутся общие темы для бесед и обсуждений. Причем каждый видит лишь 50% одной и той же проблемы, поэтому всегда интересно, что думает по этому же поводу «зеркальщик». В результате совместной работы происходит взаимная коррекция, уточнение. Критика почти всегда является конструктивной, так как действительно может быть учтена.</string>
    <string name="zak_desc">Первый партнёр, который называется передатчиком социального заказа, или просто заказчиком, смотрит на второго, называемого приемником, сверху вниз, как на более нижестоящего, недооценивая его. Второй (приёмник, или подзаказный) смотрит на первого (заказчика), наоборот, как на человека интересного, значимого, переоценивая его поначалу.
Приёмника может восхищать в заказчике, во-первых, его поведение, манера держаться, умение легко сделать то, к чему стремится приёмник, и, во-вторых, стиль изложения его мыслей, его творческий почерк. Приёмник в присутствии заказчика невольно начинает заискивать перед ним, угождать ему по каким-то для себя непонятным причинам. Начинается это с мелочей, а потом делается больше и больше, пока приёмник сам не начинает сдерживать себя. Причем со стороны это воспринимается так, как будто приёмник почему-то оправдывается перед заказчиком.
Вместе с тем для приёмника есть в поведении заказчика и неприятные, раздражающие моменты. Те черты, которые заказчик выпячивает, для того чтобы, с его точки зрения, хорошо выглядеть в обществе, привлечь к себе внимание, проникают в подсознание приёмника и будят в нём смутную тягу к активности по устранению тех условий, которые заставляют заказчика страдать или вести себя так неестественно. Однако приёмнику всегда непонятно, что же надо конкретно делать. Выдаваемый заказ оказывается не индивидуальным, а социальным, т.е. за ним скрываются проблемы той группы людей, в которую включена эта пара.</string>
    <string name="rev_desc">Отношения ревизии - это второй вид ассиметричных отношений в соционе. Ревизор как бы постоянно следит за подревизным, обращая внимание на его слабое место. В отношениях ревизии создается впечатление, что ревизор постоянно хочет выяснить, что и как делает подревизный. У подревизного часто возникает впечатление, что за ним все время наблюдают, как за подопытным кроликом. Однако это не означает, что ревизор обязательно словесно указывает подревизному на его недостатки. Подревизный внутренне чувствует, что ревизор может сделать это в любой момент и поэтому поначалу находится в его присутствии в некотором напряжении. Ревизор кажется человеком значительным, а то, как он действует, заслуживающим внимания.
В отношених ревизии подревизному хочется заслужить признания ревизора, его похвала очень ценится. Однако ревизор постоянно недооценивает подревизного, мысли и дела которого ему кажутся незначительными, что не может не вызывать обиду подревизного. Сначала это даже стимулирует, хочется доказать ревизору свою полезность, но все попытки не имеют успеха. Ревизор кажется самодовольным и мелочным, он придирается, пытается поучать и перевоспитывать.</string>
    <string name="del_desc">Деловые отношения - это отношения равных партнёров. В полной мере дружескими их нельзя назвать, скорее товарищескими. Барьеров в общении не возникает, можно сказать друг другу все, что угодно. В деловых отношениях всегда присутствует чувство безопасности: каждый из них чувствует, что от партнёра не может исходить угроза. А это очень располагает, особенно если человек живет в недружественной среде.
Кроме того в этих отношениях очень заметны роли человека — те качества, которые человек пытается усиленно представить в социуме. Из-за этого возможна игра в «кошки-мышки»: умышленное чередование давления и послабления в разговоре. Дело в том, что в таких беседах один всегда имеет преимущество над другим. Все зависит от того, на какую тему зайдет беседа.</string>
</resources>