<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_night_long"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_36"
        android:background="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/margin_one"
                android:layout_marginBottom="@dimen/margin_one"
                app:srcCompat="@drawable/quan_light"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleLightText"
                android:background="@color/purple_text"
                android:gravity="center"
                android:paddingTop="@dimen/half_margin"
                android:paddingBottom="@dimen/half_margin"
                android:text="@string/about_app"
 />

            <TextView
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hammersmith_one"
                android:paddingStart="@dimen/double_margin"
                android:paddingTop="@dimen/half_margin"
                android:paddingEnd="@dimen/double_margin"
                android:paddingBottom="@dimen/half_margin"
                android:text="@string/this_is_socionics"
                android:textStyle="bold" />

            <TextView
                style="@style/TitleLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_text"
                android:gravity="center"
                android:paddingTop="@dimen/half_margin"
                android:paddingBottom="@dimen/half_margin"
                android:text="@string/what_psychotype"
                 />

            <TextView
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/double_margin"
                android:paddingTop="@dimen/half_margin"
                android:paddingEnd="@dimen/double_margin"
                android:paddingBottom="@dimen/half_margin"
                android:text="@string/desc_psychotype"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

