<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="ru.d3st.socionic.questions.QuestionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_back">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/double_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/double_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/double_margin" />

        <ImageView
            android:id="@+id/iv_back_night"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_back_long"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/back_night_long"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back_button"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toTopOf="@+id/line_up" />

        <ImageView
            android:id="@+id/iv_circle_yellow"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/line_up"
            app:srcCompat="@drawable/circle_yellow"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_number"
            setNumQuestion="@{viewmodel.progress}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_circle_yellow"
            app:layout_constraintEnd_toEndOf="@+id/iv_circle_yellow"
            app:layout_constraintStart_toStartOf="@+id/iv_circle_yellow"
            app:layout_constraintTop_toTopOf="@+id/line_up"
            tools:text="1" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            setDataProgress="@{viewmodel.progress}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:progressBackgroundTint="@color/yellow_text"
            android:progressTint="@color/purple_text"
            app:layout_constraintEnd_toStartOf="@+id/line_right"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@+id/iv_circle_yellow" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/montserat_200"
            android:gravity="center"
            android:padding="@dimen/margin_one"
            android:text="@{viewmodel.currentQuestion.text}"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/line_right"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            tools:text="@string/question_example" />

        <Button
            android:id="@+id/btn_yes"
            style="@style/RoundedCornerButton"
            visibleGone="@{viewmodel.resultId == 0}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="275dp"
            android:fontFamily="@font/montserrat_500"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_no"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_no"
            style="@style/RoundedCornerButton"
            visibleGone="@{viewmodel.resultId == 0}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="275dp"
            android:fontFamily="@font/montserrat_500"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_yes" />

        <Button
            android:id="@+id/btn_previous"
            android:stateListAnimator="@xml/animate_scale"
            style="@style/PreviousButton"
            visibleGone="@{!viewmodel.answers.empty}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:drawableStart="@drawable/ic_vector_left"
            android:drawablePadding="@dimen/half_margin"
            android:text="@string/previous"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/line_left" />

        <Button
            android:id="@+id/btn_result"
            style="@style/PreviousButton"
            visibleGone="@{viewmodel.resultId != 0}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:drawableEnd="@drawable/ic_vector_right"
            android:drawablePadding="@dimen/half_margin"
            android:text="@string/result"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line_right" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>